Fixed spacing issues in contact form.

--- a/Website/frontend/assets/css/_sass/partials/_marketing-site.scss
+++ b/Website/frontend/assets/css/_sass/partials/_marketing-site.scss
@@ -934,6 +934,7 @@ article.contact {
 		color: #fff;
 		border-bottom: 3px solid #ffa409;
 		border-top: 3px solid #ffa409;
+		padding-bottom: 20px;
 		position: relative;
 		.request-or {
 			background-image: url('../i/marketing/contact-or.png');
@@ -951,13 +952,14 @@ article.contact {
 		.grid {
 			-webkit-border-vertical-spacing: 0px;
 			.col {
+				border-spacing: 0;
 				.item {
 					position: relative;
-					width: 90%;
+					//width: 90%;
 					input,
 					select,
 					textarea {
-						width: 90%;
+						width: 85%;
 						color: #bcbcbc;
 					}
 					.asterisk {
@@ -965,8 +967,8 @@ article.contact {
 						vertical-align: middle;
 					}
 				}
-				.group .item {
-					width: 44%;
+				.group .item, .item.half-width {
+					width: 44.8%;
 				}
 				button {
 					background-color: #ebebeb;
